--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@angular/common": "~15.0.0",
     "@angular/compiler": "~15.0.0",
     "@angular/core": "~15.0.0",
-    "@angular/forms": "~15.0.0",
+    "@angular/forms": "^15.0.4",
     "@angular/material": "15.2.9",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@ngx-formly/core": "^6.1.8",
+    "@ngx-formly/material": "^6.1.8",
     "ang-jsoneditor": "^3.1.0",
     "jsoneditor": "^9.10.2",
     "rxjs": "~7.4.0",
@@ -30,6 +32,7 @@
     "@angular-devkit/build-angular": "^15.1.1",
     "@angular/cli": "~15.1.1",
     "@angular/compiler-cli": "^15.1.0",
+    "@babel/preset-env": "^7.22.9",
     "typescript": "~4.9.4"
   }
 }
