--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "emitDecoratorMetadata": false,
+    "strictPropertyInitialization": false,
     "baseUrl": "./",
     "skipLibCheck": true,
     "outDir": "./dist/out-tsc",
@@ -17,11 +19,11 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es5",
-    "module": "ES2022",
+    "target": "es2017",
+    "module": "ES2020",
     "useDefineForClassFields": false,
     "lib": [
-      "ES2022",
+      "ES2020",
       "dom"
     ]
   },
